welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: '(' expected but identifier found.
while nbBiscuit!=4 {
      ^RunFour:10: error: illegal start of simple expression
	}
        ^