welcome.lessons.welcome.variables.RunFour.scala.code
var nbbiscuit:Int = 0;
avance();
while nbBiscuit!=4 {
  while (estSurBiscuit()) {
    nbBiscuit = nbBiscuit+1;
    avance;
  }
}